--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,42 @@
-# # Ignore node_modules everywhere
-# **/node_modules/
+# Node modules for all folders
+node_modules/
+client/node_modules/
+server/node_modules/
+socket/node_modules/
 
-# # Environment files
-# .env
-# .env.local
-# .env.*.local
+# Build output
+dist/
+build/
+client/build/
+server/dist/
+socket/dist/
 
-# # Logs
-# npm-debug.log*
-# yarn-debug.log*
-# yarn-error.log*
-
-# # Build output
-# dist/
-# build/
-
-# # Misc
-# .DS_Store
-# Ignore all node_modules in any folder
-**/node_modules/
-
-# Ignore environment variables
-**/.env
-
-# Ignore build outputs
-**/build/
-**/dist/
-
-# Ignore log files
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 *.log
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+*.swp
+
+# Editor folders
+.vscode/
+.idea/
+
+# Other
+package-lock.json
