fix: add render-preinstall to handle dependency conflicts

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "render-preinstall": "npm install --legacy-peer-deps"
+
   },
   "author": "",
   "license": "ISC",
