--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "start": "nodemon index.js",
     "render-preinstall": "npm install --legacy-peer-deps"
-
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +17,7 @@
     "express": "^5.1.0",
     "gridfs-stream": "^1.1.1",
     "mongoose": "^8.17.1",
-    "multer": "^1.4.5-lts.1",
+    "multer": "1.4.4",
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.1.10"
   }
